# ftlsim

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: REPORT.md
include/ftlsim/ftl/: mapping.hpp
include/ftlsim/nand/: block.hpp  nand.hpp  page.hpp
src/ftl/: mapping.cpp
src/nand/: block.cpp  nand.cpp  page.cpp
web/: index.html
